# MAc

./: CMakeLists.txt  README.md
docs/: cpp_migration_plan.md
examples/: animate_tokamak.py  run_live_animation.py
include/sim/: constants.hpp  controller.hpp  field_solver.hpp  particle.hpp  simulation.hpp  species.hpp
src/: field_solver.cpp  particle.cpp  simulation.cpp
tests/: CMakeLists.txt  tests_regression.cpp  tests_smoke.cpp
tests/data/: python_energy_snapshot.json  python_field_snapshot.json
tokamak_sim/: __init__.py  constants.py  controller.py  fields.py  particle.py  physics.py  simulation.py  species.py  visualization.py
